  traits, DINA, and Rasch copula models.

  - exploratory IRT models are no longer rotated by default in `coef()`,
  and now requires an explicit `rotate` argument

  - computation of `S_X2` statistic in `itemfit` now much more stable for
  polytomous item types

  - support for the `plink` package now unofficially dropped because it was
  removed from CRAN

NEW FEATURES

  - `mdirt` function added to model discrete latent variables such as latent
  class analysis for dichotomous and polytomous items. Can be used to model
  several other discrete IRT models as well, such as the located latent
  class model, multidimensional IRT with discrete traits, DINA models,
  etc. See the examples and documentation for details

  - axillary support for `DiscreteClass` objects added to `itemfit()`,
  `M2()`, `fscores()`, `wald()`, and `boot.mirt()`

  - the S-X2 statistic available in `itemfit()` has been generalized to
  include multidimensional models

  - the method `'QMCEM'` has been added for quasi-Monte Carlo integration in
  `mirt()` and `multipleGroup()` for estimating higher dimensional models
  with greater accuracy (suggested by Alexander Robitzsch). Several axillary
  function such as `fscores()`, `itemfit()`, and `M2()` also now contain an
  `QMC` argument (or will accept one through the ...  argument) to use the
  same integration scheme for better accuracy in higher dimensional models

  - nonlinear parameter constraints for EM estimation can be specified by
  using the `Rsolnp` and `alabama` packages by passing `optimizer = 'solnp'`
  and `optimizer = 'alabama'`, as well as the relevant package arguments
  through the `solnp_ags` and `alabama_ags` list inputs

  - `itemnames` argument added to `mirt.model()` to allow model specifications
  using raw item names rather than location indicators

  - `accelerate` argument changed from logical to character vector, now
  allowing three potential options: 'Ramsay' (default), 'squarem', and 'none'