@@ -17,14 +17,16 @@ scoring key for item 32 may be incorrect, and should be changed from 5 to 3.
 head(SAT12)
 data <- key2binary(SAT12,
     key = c(1,4,5,2,3,1,2,1,3,1,2,4,2,1,5,3,4,4,1,4,3,3,4,1,3,5,1,3,1,5,4,5))
+head(data)
 
-#score the data, missing treated as NA
+#score the data, missing (value of 8) treated as NA
 SAT12missing <- SAT12
-SAT12missing[SAT12missing == '8'] <- NA
+SAT12missing[SAT12missing == 8] <- NA
 data <- key2binary(SAT12missing,
     key = c(1,4,5,2,3,1,2,1,3,1,2,4,2,1,5,3,4,4,1,4,3,3,4,1,3,5,1,3,1,5,4,5))
+head(data)
 
-#potentially better scoring for item 32
+#potentially better scoring for item 32 (based on nominal model finding)
 data <- key2binary(SAT12,
     key = c(1,4,5,2,3,1,2,1,3,1,2,4,2,1,5,3,4,4,1,4,3,3,4,1,3,5,1,3,1,5,4,3))
 }
