@@ -32,12 +32,13 @@ test_that('dich data', {
     #nestlogit
     scoredSAT12 <- data
     scoredSAT12[,1:5] <- as.matrix(SAT12[,1:5])
+    scoredSAT12[scoredSAT12 == 8] <- NA
     nestmod <- mirt(scoredSAT12, 1, c(rep('2PLNRM',5),rep('2PL', 27)), key=key, verbose=FALSE)
     cfs <- as.numeric(do.call(c, coef(nestmod, digits=4)))
     cfs <- cfs[cfs != 0 & cfs != 1]
-    expect_equal(cfs, c(0.7928, -1.0428, -0.5715, -0.5787, -3.1137, 1.4113, 0.2128, 0.07, -5.4259, -5.7802, 1.5217, 0.4431, -0.919, -0.4077, -0.2366, -1.6949, -2.9472, -1.3499, -0.6444, -6.4068, 1.063, -1.1381, 0.1255, -0.1845, -0.3254, -0.2015, 0.1254, 0.4052, -0.6207, -2.5713, 0.5877, -0.5306, 0.0333, -0.0066, 0.1137, -1.1324, -0.0994, 0.0382, -0.2306, -3.6532, 0.983, 0.605, 0.4158, 0.0505, -0.0696, -1.3233, 0.6194, 0.0295, -0.7007, -5.3263, 1.1315, -2.04, 1.0201, 1.3905, 0.7031, -1.5122, 0.5175, 2.1378, 0.9976, -0.3594, 1.7057, 5.2077, 0.1694, -0.3456, 1.0861, 0.847, 1.0424, 1.177, 1.327, 1.9449, 0.7268, -0.3816, 1.4883, 4.0989, 1.6847, -0.8479, 0.8226, 0.2359, 1.5806, 2.6433, 0.6012, 2.5153, 1.5424, 3.4789, 0.649, -0.8519, 1.2108, 1.2726, 0.7751, -0.567, 1.5423, -0.17, 1.8603, 2.7282, 1.076, 0.1748, 0.8315, -0.7493, 0.3816, -0.2479, 2.3798, 2.8218, 0.1269, -1.6513),
+    expect_equal(cfs, c(0.8075,-1.0421,-0.5669,-0.5737,-3.0614,0.2125,0.0698,-5.3709,1.5103,0.444,-0.9065,-0.3884,-0.2221,-2.9412,-1.3382,-0.6365,1.0693,-1.1192,0.1294,-0.1866,-0.332,0.1263,0.4042,-0.624,0.576,-0.5181,0.0332,-0.0055,0.1145,-0.0994,0.0384,-0.2303,0.9778,0.6075,0.4063,0.0481,-0.0747,0.6153,0.0278,-0.7043,1.1276,-2.0376,1.0278,1.3932,0.7003,-1.5112,0.5251,2.1404,1.003,-0.3598,1.7028,5.2068,0.1643,-0.3455,1.0956,0.8494,1.0374,1.1747,1.3068,1.9325,0.7252,-0.3815,1.4946,4.1057,1.7048,-0.8517,0.8311,0.2367,1.5509,2.6202,0.6068,2.5177,1.5574,3.4923,0.6458,-0.8513,1.2023,1.2685,0.7725,-0.5667,1.5348,-0.1701,1.8923,2.7513,1.0725,0.1742,0.832,-0.7494,0.3767,-0.2478,2.4171,2.8476,0.1256,-1.6512),
                  tolerance = 1e-2)
-    expect_equal(nestmod@logLik, -11715.17, tolerance = 1e-4)
+    expect_equal(nestmod@logLik, -11626.06, tolerance = 1e-4)
 
     #simulate data
     set.seed(1234)
