@@ -20,6 +20,10 @@ MAJOR CHANGES
   - support for the `plink` package now unofficially dropped because it was
   removed from CRAN
 
+  - data inputs are now required to have category spacing codings exactly
+  equal to 1 (e.g., [0, 1, 2, ...]; patterns such as [0, 2, 3] which are
+  implicitly missing spaces are now invalid)
+
 NEW FEATURES
 
   - `mdirt` function added to model discrete latent variables such as latent
